Actions
Bug #12573
closedadm1031: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
../../sun4u/io/i2c/clients/adm1031.c: In function 'adm1031_attach': ../../sun4u/io/i2c/clients/adm1031.c:354: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' ../../sun4u/io/i2c/clients/adm1031.c:373: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' ../../sun4u/io/i2c/clients/adm1031.c:389: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *'
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit a0fef47a74bc2bafe7fd32b012067b94a92892bd
commit a0fef47a74bc2bafe7fd32b012067b94a92892bd Author: Toomas Soome <tsoome@me.com> Date: 2020-04-27T16:54:17.000Z 12573 adm1031: NULL pointer errors Reviewed by: Yuri Pankov <ypankov@fastmail.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions