12573 adm1031: NULL pointer errors Reviewed by: Yuri Pankov <ypankov@fastmail.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>